--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY='%&bgvcs^ygg5heg!3q=x%9_o22z+j=r(q^l3g!v3$5o@k9*o&_'
-DEBUG=False
+DEBUG=True
 DB_NAME='tribune'
 DB_USER='wecode'
 DB_PASSWORD='maman'
